<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/IV_movie"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/TV_type"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/movieType"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TV_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TV_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rating"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/TV_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/description"
        android:textSize="24sp" />

    <Button
        android:id="@+id/BT_viewed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_viewed_movies" />

    <Button
        android:id="@+id/BT_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update" />

    <Button
        android:id="@+id/BT_delete"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColorHighlight="#3F51B5"
        android:textColorHint="#2196F3"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/TV_viewed"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/did_you_view_this_movie"
        android:textSize="18sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="#5EE7F8"
        android:src="@drawable/favorite_foreground"/>

</LinearLayout>
</ScrollView>